--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body {
 .home__title {
   white-space: nowrap;
   letter-spacing: 1px;
+  text-transform: uppercase;
 }
 .home__title.h2 {
   font-size: 2.625em;
