--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,18 +25,11 @@ const { title } = Astro.props;
 		<meta name="robots" content="index, follow" />
 		<meta name="author" content="Eduardo maximiliano" />
 		<meta name="theme-color" content="#303443" />
-		<meta
-			property="og:image"
-			content="https://avatars.githubusercontent.com/u/82767376?s=400&u=87460c41ac5ec28ca91668311c76a2f7a292de7e&v=4"
-		/>
+		<meta property="og:image" content="/images/logo.webp" />
 		<meta property="og:image:alt" content="MaximoJSDev - Logo" />
 
 		<link rel="canonical" href="https://MaximoJSDev.github.io/" />
-		<link
-			rel="shortcut icon"
-			href="https://avatars.githubusercontent.com/u/82767376?s=400&u=87460c41ac5ec28ca91668311c76a2f7a292de7e&v=4"
-			type="image/png"
-		/>
+		<link rel="shortcut icon" href="/images/logo.webp" type="image/webp" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -50,30 +43,18 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		--primaryColor: #006dff;
 	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
+	*,
+	*::after,
+	*::before {
+		box-sizing: border-box;
+		padding: 0;
+		margin: 0;
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+	body {
+		background-color: #0c1423;
+		color: #fff;
+		font-family: "Roboto";
 	}
 </style>
