--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,7 @@
     align-items: center;
     justify-content: center;
     padding-top: 20px;
+    z-index: 111;
   }
   ul {
     display: flex;
